<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>yi.shi</groupId>
    <artifactId>k8s-ssh-core</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.plugin.version>3.1.0</maven.plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jsch</artifactId>
            <version>0.1.55</version>
        </dependency>
        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.6.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>32.1.1-jre</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.12.0</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.13.0</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.12</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba.fastjson2</groupId>
            <artifactId>fastjson2</artifactId>
            <version>2.0.43</version>
        </dependency>
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>${maven.plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>yi.shi.ssh.Main</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.akathist.maven.plugins.launch4j</groupId>
                <artifactId>launch4j-maven-plugin</artifactId>
                <version>1.7.25</version>
                <executions>
                    <execution>
                        <id>l4j-clui</id>
                        <phase>package</phase>
                        <goals>
                            <goal>launch4j</goal>
                        </goals>
                        <configuration>
                            <!-- 打包类型，可使用值：console、gui  分别代表控制台和图形界面程序-->
                            <headerType>console</headerType>
                            <!-- jar文件位置 -->
                            <jar>target/k8s-ssh-core-1.0-SNAPSHOT-jar-with-dependencies.jar</jar>
                            <!-- 生成exe文件的名称 -->
                            <outfile>target/run.exe</outfile>
                            <errTitle>pkg-sb-error</errTitle>
                            <classPath>
                                <!--
                                这里一定要注意，springboot默认打包后的启动类是这个，而不是我们程序中的Application文件，
                                如果不清楚，可以讲打包的jar文件解压找到:META-INF/MANIFEST.MF文件查看里面的：Main-Class
                                属性值
                                -->
                                <mainClass>yi.shi.ssh.Main</mainClass>
                                <addDependencies>true</addDependencies>
                                <preCp>anything</preCp>
                            </classPath>
                            <jre>
                                <jdkPreference>jdkOnly</jdkPreference>
                                <!-- jdk运行目录，这里可使用绝对路径，也可使用相对路径，不建议使用决定路径，这里我们直接采用相对路径，下面这个配置标识jdk的目录和exe的文件在同级 -->
                                <path>./runtime</path>
                                <jdkPreference>preferJre</jdkPreference>
                                <opts>
                                    <opt>-server</opt>
                                    <opt>-Xss256k</opt>
                                    <opt>-XX:MetaspaceSize=256m</opt>
                                    <opt>-XX:MaxMetaspaceSize=256m</opt>
<!--                                    <opt>-Xms512m</opt>-->
<!--                                    <opt>-Xmx512m</opt>-->
<!--                                    <opt>-Xmn512m</opt>-->
                                    <opt>-XX:SurvivorRatio=8</opt>
                                    <opt>-XX:+AggressiveOpts</opt>
                                    <opt>-XX:+UseBiasedLocking</opt>
                                    <opt>-XX:+DisableExplicitGC</opt>
                                    <opt>-XX:MaxTenuringThreshold=12</opt>
                                    <opt>-XX:+UseConcMarkSweepGC</opt>
                                    <opt>-XX:+UseParNewGC</opt>
                                    <opt>-XX:+CMSParallelRemarkEnabled</opt>
                                    <opt>-XX:LargePageSizeInBytes=128m</opt>
                                    <opt>-XX:+UseFastAccessorMethods</opt>
                                    <opt>-XX:+UseCMSInitiatingOccupancyOnly</opt>
                                    <opt>-Djava.awt.headless=true</opt>
                                    <opt>-Duser.timezone=GMT+08</opt>
                                    <opt>-Dvar1=var1-value-001</opt>
                                    <opt>-Dconfig.file=./config.properties</opt>
                                </opts>
                            </jre>
                            <versionInfo>
                                <fileVersion>1.2.3.4</fileVersion>
                                <txtFileVersion>txt file version?</txtFileVersion>
                                <fileDescription>a description</fileDescription>
                                <copyright>my copyright</copyright>
                                <productVersion>4.3.2.1</productVersion>
                                <txtProductVersion>txt product version</txtProductVersion>
                                <productName>E-N-C-C</productName>
                                <internalName>ccne</internalName>
                                <originalFilename>pkg.exe</originalFilename>
                            </versionInfo>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>